--- a/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/style.css
+++ b/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/style.css
@@ -2,13 +2,29 @@
 .foto {
     border: 1px solid #505050;
     border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 body {
     background: rgb(236, 235, 235);
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
 #title, .subtitle, .post_title {
+    color: #505050;
+}
+
+.title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
     color: #505050;
 }
 
@@ -30,8 +46,28 @@ body {
 .post_content {
     margin: 0px;
     margin-bottom: 15px;
+    text-transform: capitalize;
+    text-align: justify;
 }
 
 .post_image {
     margin-bottom: 15px;
+    width: 100%;
+}
+
+.list_no_order {
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.list_order {
+    padding-left: 30px;
+}
+
+.list_no_order li a {
+    text-decoration: none;
+}
+
+.list_order li a {
+    text-decoration: none;
 }
