--- a/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/style.css
+++ b/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/style.css
@@ -11,7 +11,9 @@ body {
     background: rgb(236, 235, 235);
     font-family: Verdana;
     max-width: 900px;
-    margin: auto;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #title, .subtitle, .post_title {
